WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23955
V8HTMLPlugInCustom returns undefined, which fools interceptors.
https://bugs.webkit.org/show_bug.cgi?id=23955
Summary
V8HTMLPlugInCustom returns undefined, which fools interceptors.
Dimitri Glazkov (Google)
Reported
2009-02-13 13:47:38 PST
V8 interceptors need a truly empty value, rather than undefined. Sad.
Attachments
V8HTMLPlugInCustom returns undefined, which fools interceptors, v1
(3.24 KB, patch)
2009-02-13 13:50 PST
,
Dimitri Glazkov (Google)
eric
: review-
Details
Formatted Diff
Diff
V8HTMLPlugInCustom returns undefined, which fools interceptors, v2
(3.22 KB, patch)
2009-02-13 16:04 PST
,
Dimitri Glazkov (Google)
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-02-13 13:50:27 PST
Created
attachment 27668
[details]
V8HTMLPlugInCustom returns undefined, which fools interceptors, v1 WebCore/ChangeLog | 13 +++++++++++++ .../v8/custom/V8HTMLPlugInElementCustom.cpp | 16 ++++++++-------- 2 files changed, 21 insertions(+), 8 deletions(-)
Eric Seidel (no email)
Comment 2
2009-02-13 14:01:28 PST
Comment on
attachment 27668
[details]
V8HTMLPlugInCustom returns undefined, which fools interceptors, v1 We're talking about something prettier, and involving more pink ponies and less scary undocumented subtitles in #webkit. No biscuit for this patch!
Dimitri Glazkov (Google)
Comment 3
2009-02-13 16:04:19 PST
Created
attachment 27674
[details]
V8HTMLPlugInCustom returns undefined, which fools interceptors, v2 WebCore/ChangeLog | 13 +++++++++++++ .../v8/custom/V8HTMLPlugInElementCustom.cpp | 16 ++++++++-------- 2 files changed, 21 insertions(+), 8 deletions(-)
Eric Seidel (no email)
Comment 4
2009-02-13 21:05:50 PST
Comment on
attachment 27674
[details]
V8HTMLPlugInCustom returns undefined, which fools interceptors, v2 LGTM.
Dimitri Glazkov (Google)
Comment 5
2009-02-18 10:47:47 PST
Landed as
http://trac.webkit.org/changeset/41017
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug