2009-02-14  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=23955
        V8HTMLPlugInCustom returns undefined, which fools interceptors.

        * bindings/v8/custom/V8HTMLPlugInElementCustom.cpp:
        (WebCore::NAMED_PROPERTY_GETTER): Use deferToInterceptor() return value.
        (WebCore::NAMED_PROPERTY_SETTER): Ditto.
        (WebCore::INDEXED_PROPERTY_GETTER): Ditto.
        (WebCore::INDEXED_PROPERTY_SETTER): Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@41017 bbb929c8-8fbe-4397-9dbb-9b2b20218538