third_party/WebKit/WebCore/bindings/v8/custom/V8HTMLPlugInElementCustom.cpp
@@ -49,11 +49,11 @@ NAMED_PROPERTY_GETTER(HTMLPlugInElement)
     HTMLPlugInElement* imp = V8Proxy::DOMWrapperToNode<HTMLPlugInElement>(info.Holder());
     ScriptInstance scriptInstance = imp->getInstance();
     if (!scriptInstance)
-        return v8::Undefined();
+        return deferToInterceptor();
 
     v8::Local<v8::Object> instance = v8::Local<v8::Object>::New(scriptInstance->instance());
     if (instance.IsEmpty())
-        return v8::Undefined();
+        return deferToInterceptor();
 
     return NPObjectGetNamedProperty(instance, name);
 }
@@ -64,11 +64,11 @@ NAMED_PROPERTY_SETTER(HTMLPlugInElement)
     HTMLPlugInElement* imp = V8Proxy::DOMWrapperToNode<HTMLPlugInElement>(info.Holder());
     ScriptInstance scriptInstance = imp->getInstance();
     if (!scriptInstance)
-        return v8::Undefined();
+        return deferToInterceptor();
 
     v8::Local<v8::Object> instance = v8::Local<v8::Object>::New(scriptInstance->instance());
     if (instance.IsEmpty())
-        return v8::Undefined();
+        return deferToInterceptor();
 
     return NPObjectSetNamedProperty(instance, name, value);
 }
@@ -85,11 +85,11 @@ INDEXED_PROPERTY_GETTER(HTMLPlugInElement)
     HTMLPlugInElement* imp = V8Proxy::DOMWrapperToNode<HTMLPlugInElement>(info.Holder());
     ScriptInstance scriptInstance = imp->getInstance();
     if (!scriptInstance)
-        return v8::Undefined();
+        return deferToInterceptor();
 
     v8::Local<v8::Object> instance = v8::Local<v8::Object>::New(scriptInstance->instance());
     if (instance.IsEmpty())
-        return v8::Undefined();
+        return deferToInterceptor();
 
     return NPObjectGetIndexedProperty(instance, index);
 }
@@ -100,11 +100,11 @@ INDEXED_PROPERTY_SETTER(HTMLPlugInElement)
     HTMLPlugInElement* imp = V8Proxy::DOMWrapperToNode<HTMLPlugInElement>(info.Holder());
     ScriptInstance scriptInstance = imp->getInstance();
     if (!scriptInstance)
-        return v8::Undefined();
+        return deferToInterceptor();
 
     v8::Local<v8::Object> instance = v8::Local<v8::Object>::New(scriptInstance->instance());
     if (instance.IsEmpty())
-        return v8::Undefined();
+        return deferToInterceptor();
 
     return NPObjectSetIndexedProperty(instance, index, value);
 }
